--- a/co-es6modules.html
+++ b/co-es6modules.html
@@ -3,13 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
         <title>代码组织：ES6 模块化</title>
-        <link type="text/css" rel="stylesheet" href="highlight/default.css" />
         <style type="text/css">
             .hljs { background-color: #FFF; }
             code { font-size: 18px; }
         </style>
-        <script src="highlight/highlight.pack.js"></script>
-        <script type="module" crossorigin>
+        <script type="module">
 
                 import Human from "./classes.js"
 
