--- a/co-es6modules.html
+++ b/co-es6modules.html
@@ -9,7 +9,7 @@
         </style>
         <script type="module">
 
-                import Human from "./classes.js"
+                import { Human } from "./classes.js"
 
                 hljs.initHighlightingOnLoad();
 
