--- a/co-es6modules.html
+++ b/co-es6modules.html
@@ -9,7 +9,7 @@
         </style>
         <script type="module">
 
-                import { Human } from "./classes.js"
+                import { Human as App.Entity.Human } from "./classes.js"
 
                 
 
@@ -47,7 +47,7 @@
                 window.addEventListener("click",function(){
 
                     //App.Login.init();
-                    var h = new Human('于', '谦', 50, '男', ['抽烟', '喝酒', '烫头']);
+                    var h = new App.Entity.Human('于', '谦', 50, '男', ['抽烟', '喝酒', '烫头']);
                     alert(h.name.first);
 
                 });
