--- a/co-es6modules.html
+++ b/co-es6modules.html
@@ -40,6 +40,10 @@
                     var h = new Human('于', '谦', 50, '男', ['抽烟', '喝酒', '烫头']);
                     alert(h.name.first);
 
+                    var p = new App.Entity.Person('于', '谦', 50, '男', ['抽烟', '喝酒', '烫头']);
+                    alert(p.name.first);
+
+
                 });
         </script>
 	</head>
